# actions_mcp

./: .gitignore  README.md  actions_mcp.yaml  example_actions_mcp.yaml  hooks_mcp.yaml  pyproject.toml
.github/workflows/: all-checks.yml
actions_mcp/: __init__.py  config.py  executor.py  server.py  utils.py
agents/: test_guide.md
hooks_mcp/: __init__.py  config.py  executor.py  server.py  utils.py
tests/: __init__.py  test_config.py  test_executor.py  test_security.py  test_server.py  test_shell_quoting.py  test_utils.py
