[project]
name = "actions-mcp"
version = "0.1.0"
description = "MCP server that exposes project-specific development tools (tests, linters, etc.) via YAML configuration"
authors = [
    { name = "Steve Cosman" }
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
actions-mcp = "actions_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
