[project]
name = "hooks-mcp"
version = "0.2.2"
description = "MCP server that exposes project-specific development tools (tests, linters, etc.) and prompts via YAML configuration"
authors = [
    { name = "Steve Cosman" }
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"

[project.urls]
Homepage = "https://github.com/scosman/hooks_mcp"
Repository = "https://github.com/scosman/hooks_mcp"

[dependency-groups]
dev = [
    "pyright==1.1.376",
    "pytest>=8.3.3",
    "ruff>=0.9.0",
]

[project.scripts]
hooks-mcp = "hooks_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
